started html/css

--- a/index.html
+++ b/index.html
@@ -3,12 +3,79 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Fresh Market</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two|Lora" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="script.js"></script>
 </head>
+    <!-- header -->
+    <header>
+    <section class = "headerNav">
+    <h1> Fresh Market</h1>
+    <nav class="navbar">
+        <ul>
+            <li>Fruit</li>
+            <li>Vegetables</li>
+            <li>Dairy</li>
+        </ul>
+    </nav>
+</section>
+</header>
+
+<!-- body -->
 <body>
-    
+<!-- left section -->
+
+<section class = "screenSplit">
+
+    <!-- right section -->
+    <section class = "content">
+        <h3>This is my main section</h3>
+<!-- Fruit Grid -->
+       <div class = "fruitGrid">
+            <img class ="apple" src ="images/apple.jpg" alt="apple">
+            <img class ="banana" src ="images/banana.jpg" alt="banana">
+            <img class ="blueberry" src="images/blueberry.jpg" alt="blueberry">
+            <img class="orange" src="images/orange.jpg" alt="orange">
+            <img class="pear" src="images/pear.jpg" alt="pear">
+            <img class="grapes" src="images/grapes.jpg" alt="grapes">
+       </div>
+
+<!--Veggie Grid -->
+    <div class = "veggieGrid">
+            <img class ="pepper" src ="images/pepper.jpg" alt="pepper">
+            <img class ="carrot" src ="images/carrot.jpg" alt="carrot">
+            <img class ="yellowsquash" src="images/yellowsquash.jpg" alt="yellowsquash">
+            <img class="eggplant" src="images/eggplant.jpg" alt="eggplant">
+            <img class="potato" src="images/potato.jpg" alt="potato">
+            <img class="lettuce" src="images/lettuce.jpg" alt="lettuce">
+    </div>
+<!--Dairy Grid -->
+    <div class = "dairyGrid">
+            <img class ="milk" src ="images/milk.jpg" alt="milk">
+            <img class ="butter" src ="images/butter.jpg" alt="butter">
+            <img class ="bread" src="images/bread.jpg" alt="bread">
+            <img class="garlic" src="images/garlic.jpg" alt="garlic">
+            <img class="cheese" src="images/cheese.jpg" alt="cheese">
+            <img class="eggs" src="images/eggs.jpg" alt="eggs">
+    </div>
+    </section>
+
+    <section class = "checkout">
+        <aside class = "cart">
+            <h3>This is my cart section  </h3>
+        </aside>
+    </section>
+
+
+
+
+
+
+
+</section>
+
+
 </body>
 </html>
