--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fresh Market</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lobster+Two|Lora" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="script.js"></script>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+   
 </head>
     <!-- header -->
     <header>
@@ -64,7 +67,12 @@
 
     <section class = "checkout">
         <aside class = "cart">
-            <h3>This is my cart section  </h3>
+            <h3>Cart  </h3>
+            <div class ="cartImg">
+            <i class="fas fa-shopping-cart"></i>
+            </div>
+            <div class = "cartBkrnd">
+            </div>
         </aside>
     </section>
 
@@ -78,4 +86,6 @@
 
 
 </body>
+ <!-- Javascript -->
+ <script default src="script.js"></script>
 </html>
