added functionality for cart

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
     <!-- right section -->
     <section class = "content">
-        <h3>This is my main section</h3>
 <!-- Fruit Grid -->
        <div class = "fruitGrid">
             <img class ="apple" src ="images/apple.jpg" alt="apple">
@@ -71,15 +70,14 @@
             <div class ="cartImg">
             <i class="fas fa-shopping-cart"></i>
             </div>
-            <div class = "cartBkrnd">
+            <div class = "cartContent">
+                <ul class = "cartList">
+                </ul>
+                <h3>Total:</h3>
+                <h4 class ="total">0.00</h4>
             </div>
         </aside>
     </section>
-
-
-
-
-
 
 
 </section>
