pushing final site

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <h1> Fresh Market</h1>
     <nav class="navbar">
         <ul>
-            <li>Fruit</li>
-            <li>Vegetables</li>
-            <li>Dairy</li>
+            <li class="fruitLink">Fruit</li>
+            <li class="veggieLink">Vegetables</li>
+            <li class="dairyLink">Dairy</li>
         </ul>
     </nav>
 </section>
@@ -35,40 +35,19 @@
     <!-- right section -->
     <section class = "content">
 <!-- Fruit Grid -->
-       <div class = "fruitGrid">
-            <img class ="apple" src ="images/apple.jpg" alt="apple">
-            <img class ="banana" src ="images/banana.jpg" alt="banana">
-            <img class ="blueberry" src="images/blueberry.jpg" alt="blueberry">
-            <img class="orange" src="images/orange.jpg" alt="orange">
-            <img class="pear" src="images/pear.jpg" alt="pear">
-            <img class="grapes" src="images/grapes.jpg" alt="grapes">
+       <div class = "grid">
+            
        </div>
 
-<!--Veggie Grid -->
-    <div class = "veggieGrid">
-            <img class ="pepper" src ="images/pepper.jpg" alt="pepper">
-            <img class ="carrot" src ="images/carrot.jpg" alt="carrot">
-            <img class ="yellowsquash" src="images/yellowsquash.jpg" alt="yellowsquash">
-            <img class="eggplant" src="images/eggplant.jpg" alt="eggplant">
-            <img class="potato" src="images/potato.jpg" alt="potato">
-            <img class="lettuce" src="images/lettuce.jpg" alt="lettuce">
-    </div>
-<!--Dairy Grid -->
-    <div class = "dairyGrid">
-            <img class ="milk" src ="images/milk.jpg" alt="milk">
-            <img class ="butter" src ="images/butter.jpg" alt="butter">
-            <img class ="bread" src="images/bread.jpg" alt="bread">
-            <img class="garlic" src="images/garlic.jpg" alt="garlic">
-            <img class="cheese" src="images/cheese.jpg" alt="cheese">
-            <img class="eggs" src="images/eggs.jpg" alt="eggs">
-    </div>
+
     </section>
 
     <section class = "checkout">
         <aside class = "cart">
-            <h3>Cart  </h3>
+           
             <div class ="cartImg">
             <i class="fas fa-shopping-cart"></i>
+            <h3>Cart </h3>
             </div>
             <div class = "cartContent">
                 <ul class = "cartList">
